# KaroSpaceRBuilder

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: desktop-release.yml
scripts/: stage_bundled_r.sh
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
