[package]
name = "karospacer_builder"
version = "0.2.1"
description = "Desktop wrapper for the KaroSpaceR inspect and build contracts"
authors = ["Chris Langseth"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
